﻿Version 2.15.0
MVC 6
- Boilerplate.Web.Mvc6 Updated:
	- Performance improvements.
	- Added ICommand and IAsyncCommand interfaces to help implement controller actions as separate classes.
	- Refactored the DistributedCacheExtensions.
- Boilerplate.Web.Mvc6.TagHelpers Updated:
	- Performance improvements.

Version 2.14.0
MVC 6
- Change error controller route to start at 400 to 599.

Version 2.13.0
MVC 6
- Merged [Fixed problem with broken error handling on ReExecute](https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/pull/85).
- Merged [Fixes problem with returning BadGateway for StatusCodes below 200](https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/pull/87).

Version 2.12.0
MVC 5
- Add a note when debugging, always starts the site at the home page (See [this](https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/issues/84) issue).

Version 2.11.0
MVC 5
- Target Framework now respects the selected version in the new project dialogue.

Version 2.10.0
MVC 5
- Upgraded to .NET 4.5.2

Version 2.9.9
MVC 6
- Removed trailing white space.
- Improved the Subresource Integrity tag helper (SRI) to generate the SRi from a local file.
- Changed gulpfile.js to only copy third party files instead of running them through the pipeline.
- Upgraded the tag helpers NuGet package.

Version 2.9.8
MVC 5
- Upgraded to TemplateBuilder NuGet package version 1.1.4.9-beta to fix a bug where using a '.'
in the name of a project causes the NuGet package hint paths to break.
MVC 6
- Packages file path in the .xproj is now corrected automatically with the update to the latest version of
TemplateBuilder and the new Wizard I added to it.

Version 2.9.7
MVC 6
- All NuGet packages updated.
- Dropped TagHelpers NuGet package dependency on the base NuGet package.
- Refactored AtomActionResult to use IHostingEnvironment.
- Added RemoveServerHttpHeader extension method for IApplicationBuilder to the main NuGet package.