@@ -1,8 +1,8 @@
 {
-  "version": "2.0.0-rc1-final-9",
+  "version": "2.0.0-rc1-final-10",
   "title": "ASP.NET MVC 6 Boilerplate Framework",
   "description": "Provides boilerplate framework code for an ASP.NET MVC project. ASP.NET MVC Boilerplate is a professional template for building secure, fast, robust and adaptable web applications or sites. It provides the minimum amount of code required on top of the default MVC template provided by Microsoft. You can download the ASP.NET MVC Boilerplate project template on the Visual Studio Gallery or download the code on GitHub.",
-  "releaseNotes": "Performance improvements, added ICommand and IAsyncCommand interfaces to help implement controller actions as separate classes and refactored the DistributedCacheExtensions.",
+  "releaseNotes": "Added ValidateModelStateAttribute to automatically validate ModelState.",
   "authors": [ "Muhammad Rehan Saeed (RehanSaeed.com)" ],
   "owners": [ "Muhammad Rehan Saeed (RehanSaeed.com)" ],
   "copyright": "@ Muhammad Rehan Saeed. All rights Reserved",
